--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,3 @@
 spring.application.name=loans-service
+spring.config.import=configserver:http://localhost:8888
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bank_loans
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-server.port=8084
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
