--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=loans-service
 spring.config.import=configserver:http://localhost:8888
 
+management.tracing.sampling.probability=1.0
